# image_rotation

./: CMakeLists.txt  README.md  main.cpp  rotate.cpp  rotate.h
